--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@ a {
 }
 .header {
 }
+.body {
+  font-family: "Roboto";
+}
 /*?======================NAV===============*/
 .nav {
 }
@@ -29,24 +32,38 @@ a {
 
 .nav-list {
 }
-
 .nav-item {
-  font-family: "Roboto", sans-serif;
+}
+
+.nav-link {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+.nav-link:hover,
+.nav-link:focus {
+  color: #404bbf;
+}
 
-.contact-list {
-  font-family: "Roboto", sans-serif;
+.contact-link {
+  cursor: pointer;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
   font-style: normal;
+}
+.contact-list {
+}
+.contact-item {
+}
+
+.contact-link:hover,
+.contact-link:focus {
+  color: #404bbf;
 }
 
 /*?====================MAIN======================*/
@@ -105,7 +122,6 @@ a {
 }
 
 .headline-subtitle {
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -124,7 +140,6 @@ a {
 
 .ourteam-main {
   background: #f4f4fd;
-  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -133,7 +148,6 @@ a {
   color: #2e2f42;
 }
 .ourteam {
-  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11111;
@@ -152,7 +166,6 @@ a {
 }
 
 .ourteam-subtitle {
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -162,7 +175,6 @@ a {
 }
 
 .ourteam-item-text {
-  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -192,7 +204,6 @@ a {
 }
 
 .Footer-text {
-  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -202,7 +213,6 @@ a {
 .ourportfolio {
 }
 .ourportfolio-title {
-  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -217,7 +227,6 @@ a {
 .ourportfolio-img {
 }
 .ourportfolio-subtitle {
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -225,7 +234,6 @@ a {
   color: #2e2f42;
 }
 .ourportfolio-item-text {
-  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
