--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,7 @@ li {
   }
   
   .ourteam-subtitle {
+    text-transform:capitalize;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
