--- a/css/styles.css
+++ b/css/styles.css
@@ -216,7 +216,7 @@ li {
     color:  #f4f4fd;
   }
   
-  .Footer-text {
+  .footer-text {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
