--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ a {
   color: #4d5ae5;
 }
 .body {
-  font-family: "Roboto" sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #ffffff;
 }
