--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ a {
 .main-button:focus {
   background: #404bbf;
 }
-
+/*?======================NAV
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -117,6 +117,7 @@ a {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+===============*/
 
 /*====================Headline======================*/
 .headline {
