--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ a {
 
 /*?====================MAIN======================*/
 
-.main {
+.main { text-align: center;
 }
 
 .main-sect {
@@ -182,11 +182,11 @@ a {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #f4f4fd;
+  color: #4d5ae5;
 }
 
 .footer-logo span {
-  color: #4d5ae5;
+  color: #f4f4fd;
 }
 
 .footer-text {
