--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,8 @@ a {
 /*====================OurTeam======================*/
 
 .ourteam-main {
+  text-align: center;
+  background-color: #F4F4FD;
 }
 .ourteam {
   text-transform: capitalize;
