--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@ a {
   background: #2e2f42;
 }
 
-.footerlogotip {
+.footer-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -188,7 +188,7 @@ a {
   color: #4d5ae5;
 }
 
-.footerlogotip span {
+.footer-logo span {
   color: #f4f4fd;
 }
 
